--- a/index.html
+++ b/index.html
@@ -62,6 +62,73 @@
                     <p class="secondinsidedivsP">1 Years Experience</p>
                 </div>
             </div>
+            <div class="projectDiv">
+                <p class="projectp">Projects</p>
+                <span class="contactme2">CONTACT ME</span>
+            </div>
+            <div class="lastmainDiv">
+                <div class="rectangledivs">
+                    <div class="divforpic">
+                        <img class="modernartgallery" src="./Modern Art Gallery.png" alt="">
+                        
+                    </div>
+                    <p class="suratebissataurebi">MODERN ART GALLERY</p>
+                    <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span></div>
+                </div>
+                <div class="rectangledivs">
+                    <div class="divforpic">
+                        <img class="modernartgallery" src="./E-learning landing page.png" alt="">
+                    </div>
+                    <p class="suratebissataurebi">E-LEARNING LANDING PAGE</p>
+                    <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span></div>
+                </div>
+                <div class="rectangledivs">
+                    <div class="divforpic">
+                        <img class="modernartgallery" src="./TYPEMASTER KEYBOARD.png" alt="">
+                    </div>
+                    <p class="suratebissataurebi">TYPEMASTER KEYBOARD</p>
+                    <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span></div>
+                </div>
+                <div class="rectangledivs">
+                    <div class="divforpic">
+                        <img class="modernartgallery" src="./COUNTER.png" alt="">
+                    </div>
+                    <p class="suratebissataurebi">COUNTER</p>
+                    <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span> <span id="javascriptspan">JAVASCRIPT</span></div>
+                </div>
+                <div class="rectangledivs">
+                    <div class="divforpic">
+                        <img class="modernartgallery" src="./FAVORITE COLOR.png" alt="">
+                    </div>
+                    <p class="suratebissataurebi">FAVORITE COLOR</p>
+                    <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span><span id="javascriptspan">JAVASCRIPT</span></div>
+                </div>
+                <div class="rectangledivs">
+                    <div class="divforpic">
+                        <img class="modernartgallery" src="./MATH GAME.png" alt="">
+                    </div>
+                    <p class="suratebissataurebi">MATH GAME</p>
+                    <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span><span id="javascriptspan">JAVASCRIPT</span></div>
+                </div>
+
+            </div>
+
+
+
+
+
+
+
+        </div>
+        <div id="firstdivID" class="firstdiv">
+            <div id="insidefirstdivID" class="insidefirstdiv">
+                <h1>lashagoglidze</h1>
+                <div id = "headerdivID" class="headerDiv">
+                    <div id = "headerdivID1" class="ragacDiv"></div>
+                    <img src="./Path (1).png" alt="">
+                    <img src="./Shape.png" alt="">
+                </div>
+            </div>
         </div>
 
 
