--- a/index.html
+++ b/index.html
@@ -70,42 +70,56 @@
                 <div class="rectangledivs">
                     <div id = "firstID" class="divforpic">
                         <img id ="artgalery" class="modernartgallery" src="./Modern Art Gallery.png" alt="">
+                        <a href="https://lashagogli.github.io/Art-Gallery-Website/"><p class="viewprojectP">VIEW PROJECT</p></a>
+                        <a href="https://github.com/LashaGogli/Art-Gallery-Website"><p class="viewcode">VIEW CODE</p></a>
                         
                     </div>
+
+
                     <p  class="suratebissataurebi">MODERN ART GALLERY</p>
                     <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span></div>
                 </div>
                 <div class="rectangledivs">
                     <div  id = "firstID2" class="divforpic">
-                        <img class="modernartgallery" src="./E-learning landing page.png" alt="">
+                        <img id ="artgalery2" class="modernartgallery" src="./E-learning landing page.png" alt="">
+                        <a href="https://lashagogli.github.io/skilled-elearning-landing-page/"><p class="viewprojectP2">VIEW PROJECT</p></a>
+                        <a href="https://github.com/LashaGogli/skilled-elearning-landing-page"><p class="viewcode2">VIEW CODE</p></a>
                     </div>
                     <p class="suratebissataurebi">E-LEARNING LANDING PAGE</p>
                     <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span></div>
                 </div>
                 <div class="rectangledivs">
                     <div id = "firstID3"  class="divforpic">
-                        <img class="modernartgallery" src="./TYPEMASTER KEYBOARD.png" alt="">
+                        <img id ="artgalery3" class="modernartgallery" src="./TYPEMASTER KEYBOARD.png" alt="">
+                        <a href="https://lashagogli.github.io/typemaster-pre-landing-page/"><p class="viewprojectP3">VIEW PROJECT</p></a>
+                        <a href="https://github.com/LashaGogli/typemaster-pre-landing-page"><p class="viewcode3">VIEW CODE</p></a>
                     </div>
                     <p class="suratebissataurebi">TYPEMASTER KEYBOARD</p>
                     <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span></div>
                 </div>
                 <div class="rectangledivs">
                     <div id = "firstID4"  class="divforpic">
-                        <img class="modernartgallery" src="./COUNTER.png" alt="">
+                        <img id ="artgalery4"class="modernartgallery" src="./COUNTER.png" alt="">
+                        <a href="https://lashagogli.github.io/Counter/"><p class="viewprojectP4">VIEW PROJECT</p></a>
+                        <a href="https://github.com/LashaGogli/Counter"><p class="viewcode4">VIEW CODE</p></a>
                     </div>
                     <p class="suratebissataurebi">COUNTER</p>
                     <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span> <span id="javascriptspan">JAVASCRIPT</span></div>
                 </div>
                 <div class="rectangledivs">
                     <div id = "firstID5"  class="divforpic">
-                        <img class="modernartgallery" src="./FAVORITE COLOR.png" alt="">
+                        <img id ="artgalery5" class="modernartgallery" src="./FAVORITE COLOR.png" alt="">
+                        <a href="https://lashagogli.github.io/My-favorite-Color/"><p class="viewprojectP5">VIEW PROJECT</p></a>
+                        <a href="https://github.com/LashaGogli/My-favorite-Color"><p class="viewcode5">VIEW CODE</p></a>
                     </div>
                     <p class="suratebissataurebi">FAVORITE COLOR</p>
                     <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span><span id="javascriptspan">JAVASCRIPT</span></div>
                 </div>
                 <div class="rectangledivs">
                     <div  id = "firstID6" class="divforpic">
-                        <img id="mathgame" class="modernartgallery" src="./MATH GAME.png" alt="">
+                        <img id ="artgalery6" id="mathgame" class="modernartgallery" src="./MATH GAME.png" alt="">
+                        <a href="https://lashagogli.github.io/Task-9-last-game/"><p class="viewprojectP6">VIEW PROJECT</p></a>
+                        <a href="https://github.com/LashaGogli/Task-9-last-game"><p class="viewcode6">VIEW CODE</p></a>
                     </div>
                     <p class="suratebissataurebi">MATH GAME</p>
                     <div><span class="suratebismeoresataurebi">HTML</span><span class="suratebismeoresataurebi" id="cssspan">CSS</span><span id="javascriptspan">JAVASCRIPT</span></div>
