Final version of active

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="nicetomeetyou">Nice to meet you!</p>
                 <span class="imspan">I'm</span><span class="lashaspan">Lasha Goglidze</span>
                 <p class="textP">From Georgia, I'm a front-end developer passionate about building accessible web apps that users love.</p>
-                <span class="contactme">CONTACT ME</span>
+                <a href="mailto:lashagoglidzelasha@gmail.com"><span class="contactme">CONTACT ME</span></a>
 
             </div>
             <div class="middleDiv">
@@ -64,7 +64,7 @@
             </div>
             <div class="projectDiv">
                 <p class="projectp">Projects</p>
-                <span class="contactme2">CONTACT ME</span>
+                <a href="mailto:lashagoglidzelasha@gmail.com"><span class="contactme2">CONTACT ME</span></a>
             </div>
             <div class="lastmainDiv">
                 <div class="rectangledivs">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="rectangledivs">
                     <div  id = "firstID6" class="divforpic">
-                        <img id ="artgalery6" id="mathgame" class="modernartgallery" src="./MATH GAME.png" alt="">
+                        <img id ="artgalery6" class="modernartgallery" src="./MATH GAME.png" alt="">
                         <a href="https://lashagogli.github.io/Task-9-last-game/"><p class="viewprojectP6">VIEW PROJECT</p></a>
                         <a href="https://github.com/LashaGogli/Task-9-last-game"><p class="viewcode6">VIEW CODE</p></a>
                     </div>
